# architecture-and-design

./: README.md
backend/: .gitignore  README.md  dl-web.cabal  init.sql  stack.yaml
backend/app/: Main.hs
backend/src/: Cookie.hs  DB.hs  Lib.hs  Main.hs  Model.hs  View.hs
frontend/: .gitignore  README.md  elm.json
frontend/src/: Main.elm  StartingPage.elm  Types.elm
frontend/src/Page/: SignUp.elm  Starting.elm
