name:                dl-web
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/dl-web#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable dl-web
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , dl-web
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N

library
  exposed-modules:
      Lib
      Cookie
      DB
      Model
      View
--  other-modules:
--      Paths_hrfsize
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
      , aeson
      , bytestring
      , blaze-html
      , blaze-builder
      , cookie
      , scotty
      , mtl
      , postgresql-simple
      , text
      , time
      , unliftio-core
      , vector
      , wai
      , wai-extra
      , wai-middleware-static
      , warp
     
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions: OverloadedStrings
                      BangPatterns


